# testpackage-aruninvitae

./: Dockerfile  README.md  poetry.toml  pyproject.toml
.github/workflows/: cicd.yml
scripts/: publish.sh
testpackage/: foo.py
tests/: foo_test.py
